# DeveloperOS

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
devos/: __init__.py  __main__.py  cli.py  config.py  plugins.py  settings.py
devos/api/: __init__.py  app.py  server.py
devos/commands/: __init__.py  app_cmd.py  ask_cmd.py  base.py  cv_cmd.py  debug_cmd.py  docgen_cmd.py  exercise_cmd.py  explain_cmd.py  grade_cmd.py  index_cmd.py  init_cmd.py  interview_cmd.py  job_cmd.py  learn_cmd.py  meeting_cmd.py  plugins_cmd.py  projects_cmd.py  quiz_cmd.py  recall_cmd.py  remember_cmd.py  scan_cmd.py  search_cmd.py  serve_cmd.py  status_cmd.py  task_cmd.py
devos/core/: __init__.py  workspace.py
devos/modules/: __init__.py  career.py  debug.py  docgen.py  index.py  ingest.py  learning.py  meeting.py  qa.py  recall.py  trace.py
devos/providers/: __init__.py  ai.py  ollama.py
docs/: AGENT_STATE.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  FUTURE_ROADMAP.md  KNOWN_ISSUES.md  PROGRESS_LOG.md  PROJECT_BRIEF.md  ROADMAP.md  SCREENSHOTS.md  SECURITY.md  SESSION_RESUME.md  TODO.md
packaging/: README.md  build.ps1  build_installer.ps1  devos.spec  installer.iss  launch_devos.py
tests/: test_api.py  test_app_cmd.py  test_career.py  test_debug.py  test_docgen.py  test_index.py  test_ingest.py  test_learning.py  test_meeting.py  test_ollama.py  test_packaging.py  test_plugins.py  test_qa.py  test_recall.py  test_settings.py  test_smoke.py  test_tasks.py  test_ui_static.py
tools/: make_icons.py  take_screenshot_package.py  take_screenshots.py
(+12 files in other folders)
